# rankfx

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
models/common/base/: model.py
models/common/base/config/: base_config.py  training_config.py
models/common/features/: __init__.py  config.py  types.py
models/common/features/datasets/: __init__.py  pandas.py
models/common/modules/: __init__.py  embedding.py  finalnet.py  mlp.py
models/dcnv2/: model.py
models/dcnv2/config/: __init__.py  model_config.py
models/dcnv2/features/: __init__.py
models/dcnv2/model/: __init__.py  model.py
models/dcnv2/model/modules/: __init__.py
models/dcnv2/utils/: __init__.py
models/finalnet/: model.py
notebooks/: avazu_x1.ipynb  dcnv2_movielenslatest_x1.ipynb  finalnet_movielenslatest_x1.ipynb  frappe_x1.ipynb  kkbox_x1.ipynb  movielens_x1.ipynb  test.ipynb
rankfx/: __init__.py
rankfx/common/: __init__.py
rankfx/common/base/: __init__.py  model.py
rankfx/common/base/config/: __init__.py  training_config.py
rankfx/common/features/: __init__.py  config.py
rankfx/common/features/datasets/: pandas.py
rankfx/common/modules/: __init__.py  crossnet.py  embedding.py
rankfx/common/utils/: __init__.py  import_utils.py  logging_utils.py  training_utils.py
rankfx/dcnv2/: __init__.py  model.py
rankfx/dcnv2/config/: __init__.py  model_config.py
rankfx/finalnet/: __init__.py  model.py
